turtleart.lessons.turtleart.Main.SmallSquare.scala.error
Source:6: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
	droite()
              ^